<resources>
    <string name="app_name">My First App</string>
    <string name="business_name">Caffe bar Tinel</string>
    <string name="business_description">Tinel is a caffe bar of the Student Center located in the university campus in Split.
        It is decorated with an industrial design that makes a cosy atmosphere for relaxing after the lectures or studying and
        it is an excellent destination for socializing and meeting new people. Student bands play there every Friday evening.</string>
    <string name="business_address">Cvite Fiskovića 3, Split, Croatia</string>
    <string name="business_website">https://www.scst.unist.hr/prehrana/caffe-barovi/42-caffe-bar-tinel</string>
    <string name="business_hours_of_operation"> Working hours: 7:00-21:00 Friday: 7:00-23:00  Saturday: 8:00-14:00 </string>
    <string name="hours_of_operation">Hours of operation</string>
    <string name="website_address">Website</string>
    <string name="address">Address</string>

</resources>