<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.myfirstapp.MainActivity">

    <TextView
        android:id="@+id/business_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:gravity="center"
        android:padding="@dimen/padding"
        android:text="@string/business_name"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/business_name" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/caffe_picture1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/business_name"
            android:padding="@dimen/picture_move"
            android:scaleType="fitCenter"
            android:src="@drawable/slika1" />

        <ImageView
            android:id="@+id/caffe_picture2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/business_name"
            android:padding="@dimen/picture_move"
            android:scaleType="fitCenter"
            android:src="@drawable/slika2" />
    </LinearLayout>

    <TextView
        android:id="@+id/business_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:text="@string/business_description"
        android:textAlignment="center"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/address_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autoLink="map"
        android:drawableLeft="@drawable/address"
        android:gravity="center"
        android:padding="@dimen/padding"
        android:text="@string/business_address"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/web_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autoLink="web"
        android:drawableLeft="@drawable/web"
        android:gravity="center"
        android:padding="@dimen/padding"
        android:text="@string/business_website"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/working_hours_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/hour"
        android:gravity="center"
        android:padding="@dimen/padding"
        android:text="@string/business_hours_of_operation"
        android:textAlignment="center"
        android:textSize="@dimen/text_size" />

</LinearLayout>
